<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="profile_action_edit_profile">Edit Profile</string>
    <string name="profile_action_change_location">Change Location</string>
    <string name="profile_action_history">History</string>
    <string name="profile_action_change_password">Change Password</string>
    <string name="profile_action_privacy_policy">Privacy Policy</string>
    <string name="profile_menu_item_logout">Log out</string>
    <string name="profile_logout_dialog_title">Are you sure?</string>
    <string name="profile_delete_account"><u>Delete Account</u></string>

    <string name="name">Name</string>
    <string name="lastname">Last Name</string>
    <string name="nickname">Nickname</string>
    <string name="biography">Biography</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="change_birthday">Change Birthday</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
    <string name="select_birthday">Select Birthday</string>
    <string name="current_password">Current Password</string>
    <string name="password_change_info">will be logged out when the password is successfully changed</string>

    <string name="set_location">Set Location</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="district">District</string>

    <string name="edit_profile_information_warning">Edit your profile information to see the profile card</string>
    <string name="edit_profile_information_spannable_part">Edit your profile</string>
</resources>