<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewChangePasswordTitle"
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_action_change_password"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldChangePasswordCurrentPassword"
        style="@style/EditText.Togather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/current_password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/textViewChangePasswordTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputChangePasswordCurrentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldChangePasswordNextPassword"
        style="@style/EditText.Togather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/textFieldChangePasswordCurrentPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputChangePasswordNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewPasswordChangeInfo"
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_change_info"
        android:textSize="@dimen/text_medium"
        app:drawableStartCompat="@drawable/ic_info"
        app:layout_constraintTop_toBottomOf="@id/textFieldChangePasswordNextPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonChangePasswordChange"
        style="@style/Widget.App.RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xxlarge"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:text="@string/profile_action_change_password"
        app:layout_constraintTop_toBottomOf="@id/textViewPasswordChangeInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>